k8s/08-flower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-flower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-flower
  template:
    metadata:
      labels:
        app: celery-flower
    spec:
      containers:
        - name: flower
          image: mher/flower
          ports:
            - containerPort: 5555
---
apiVersion: v1
kind: Service
metadata:
  name: flower-service
spec:
  type: ClusterIP
  selector:
    app: celery-flower
  ports:
    - port: 5555
      targetPort: 5555
